# solana-knowledge

./: .excalidraw  README.md  solana.md
spl-token-playground/: Anchor.toml  package-lock.json  package.json
spl-token-playground/programs/spl-token-playground/: Cargo.toml
spl-token-playground/programs/spl-token-playground/src/: lib.rs
spl-token-playground/tests/: spl-token-playground.ts
test-indexer/: Anchor.toml  README.md  package-lock.json  package.json
test-indexer/programs/test-indexer/: Cargo.toml
test-indexer/programs/test-indexer/src/: lib.rs
test-indexer/scripts/: client.ts  historical-events.ts  live-listener.ts
test-indexer/tests/: test-indexer.ts
